<resources>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="search_language">Search languages</string>
    <string name="trending_repos">Top repos</string>

    <string name="today">Today</string>
    <string name="last_week">Last week</string>
    <string name="last_month">Last month</string>
    <string name="last_year">Last year</string>

    <string name="no_results_found">Sorry, no results found.</string>
    <string name="share">Share</string>
    <string name="communicate">Communicate</string>
    <string name="time_period">Time period</string>
    <string name="default_title_browser">Repo Information</string>
    <string name="send_to">Share this apk</string>
    <string name="author_name">Author: %1$s</string>
    <string name="share_apk_msg">Download Github top-repos app from playstore at \n</string>
</resources>
